<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/darkGrey"
    android:padding="5dp">

    <ProgressBar
        android:id="@+id/processing_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:progressTint="@color/colorAccent"
        android:progressBackgroundTint="@color/lightGrey"
        android:indeterminateTint="@color/colorAccent"
        style="?android:attr/progressBarStyleHorizontal"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnKeyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_keyboard_36dp"
            android:contentDescription="@string/exit_button"/>

        <ImageButton
            android:id="@+id/btnModeAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_auto_off_36dp"
            android:contentDescription="@string/auto_button"/>

        <ImageButton
            android:id="@+id/btnTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_english_off_36dp"
            android:contentDescription="@string/translate"
            android:visibility="gone"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_status"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/btnKeyboard"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:textSize="20dp"
        android:textColor="@android:color/holo_red_dark" />
    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnRecord"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_mic_48dp"
            android:contentDescription="@string/record_button"/>

        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_keyboard_del_48dp"
            android:contentDescription="@string/delete_button"/>

        <ImageButton
            android:id="@+id/btnEnter"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_keyboard_return_48dp"
            android:contentDescription="@string/return_button"/>

    </LinearLayout>

</LinearLayout>
